fix technology stack on mobile device

--- a/src/components/WhatWeKnow/WhatWeKnow.module.scss
+++ b/src/components/WhatWeKnow/WhatWeKnow.module.scss
@@ -44,3 +44,9 @@
     // color: red;
   }
 }
+@media only screen and (max-width: 400px) {
+  .Tech_stack > div {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+  }
+}
